# team6_car

./: .gitignore  CMakeLists.txt  README.md  map_1715381368.yaml  map_1715381420.yaml  map_1715381438.pgm  newmap.yaml  package.xml
config/: joystick.yaml  mapper_params_online_async.yaml  my_controllers.yaml  nav2_params.yaml  old_nav2_params.yaml  teleop_twst_joy.yaml
config/controller/: my_controllers.yaml
description/: lidar.xacro  materials.xacro  robot.urdf.xacro  robot_colors.xacro  robot_core.xacro  robot_core1.xacro  robot_core_ack1.xacro  robot_core_f1tenth.xacro  robot_core_old.xacro  ros2_ack.xacro  ros2_bicycle.xacro
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/team6_car/share/ament_index/resource_index/package_run_dependencies/: team6_car
install/team6_car/share/ament_index/resource_index/parent_prefix_path/: team6_car
install/team6_car/share/team6_car/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/team6_car/share/team6_car/cmake/: team6_carConfig-version.cmake  team6_carConfig.cmake
install/team6_car/share/team6_car/config/: empty.yaml  joystick.yaml  mapper_params_online_async.yaml  mapper_params_online_sync.yaml  my_controllers.yaml  nav2_params.yaml  old_nav2_params.yaml  teleop_twst_joy.yaml
install/team6_car/share/team6_car/config/controller/: my_controllers.yaml
install/team6_car/share/team6_car/description/: combined.xacro  gazebo_ackermann.xacro  inertial.xacro  inertial_macros.xacro  lidar.xacro  materials.xacro  robot.urdf.xacro  robot_colors.xacro  robot_core.xacro  robot_core1.xacro  robot_core_bicycle.xacro  robot_core_blue.xacro  robot_core_f1tenth.xacro  robot_core_not_working.xacro  robot_core_old.xacro  robot_core_real.xacro  ros2_ack.xacro  ros2_bicycle.xacro
install/team6_car/share/team6_car/environment/: ament_prefix_path.dsv  path.dsv
install/team6_car/share/team6_car/launch/: all.launch.py  joystick.launch.py  launch_robot.launch.py  launch_sim.launch.py  localization_launch.py  navigation_launch.py  online_async_launch.py  online_sync_launch.py  rsp.launch.py  spawn_car.launch.py
install/team6_car/share/team6_car/maps/: .data  .posegraph  hallway.pgm  hallway.yaml  living room.data  living room.posegraph  living_room.pgm  living_room.yaml  newmap.pgm  newmap.yaml
install/team6_car/share/team6_car/tests/: velocity_to_pwm.py
install/team6_car/share/team6_car/worlds/: empty.world  simple.world
launch/: all.launch.py  joystick.launch.py  launch_ack.launch.py  launch_robot.launch.py  launch_sim.launch.py  localization_launch.py  navigation_launch.py  online_async_launch.py  online_sync_launch.py  rsp.launch.py  spawn_car.launch.py
log/: latest_build
maps/: .data  hallway.pgm  hallway.yaml  hallway1.data  living room.data  living_room.pgm  living_room.yaml  map_1715381400.yaml  map_1715381438.yaml  map_name.pgm  map_name.yaml  my_map.pgm  my_map.yaml
micro_ros_raspberrypi_pico_sdk/: CMakeLists.txt  CTestConfiguration.ini  built_packages  main.cpp  pico_controller.cpp  pico_micro_ros_example.c  pico_uart_transports.h
micro_ros_raspberrypi_pico_sdk/ament_cmake_uninstall_target/: ament_cmake_uninstall_target.cmake
micro_ros_raspberrypi_pico_sdk/communication/: CMakeLists.txt
micro_ros_raspberrypi_pico_sdk/config/: CMakeLists.txt  pin_config.cpp  pin_config.h
micro_ros_raspberrypi_pico_sdk/hardware/: CMakeLists.txt  IRSensor.cpp  IRSensor.h  Motor.cpp  Motor.h  Servo.c  Servo.cpp  Servo.h
micro_ros_raspberrypi_pico_sdk/libmicroros/include/rosidl_runtime_c/: type_description_utils.h
pico_controller/: CMakeLists.txt  main.cpp  main.py
pico_controller/communication/: serial_communication.py
pico_controller/config/: pin_config.py
pico_controller/config/python/: pin_config.py
pico_controller/hardware/: Motor.cpp  Motor.h  Servo.cpp  ir_sensor.py  lidar.py  motor.py  servo.py
pico_controller/hardware/python/: ir_sensor.py  lidar.py
pico_controller/python/python/: servo.py
src/: velocity_to_pwm.cpp  velocity_to_pwm.py
translation layer/: velocity_to_pwm.py
translation_layer/: velocity_to_pwm.cpp
worlds/: simple.world
